unpackaged/main/default/objects/Brand_Country_Region_State_Dist_Alloc__c/Brand_Country_Region_State_Dist_Alloc__c.object-meta.xml
<CustomObject>
    <description>PS-MC-SB-13 This object is used to add allocations on distributor for single barrel 2.</description>
    <label>Distributor Level Allocation</label>
    <nameField>
        <displayFormat>D-{0000}</displayFormat>
        <label>Distributor Level Allocation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Distributor Level Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>