unpackaged/main/default/objects/Brand_Country_Region_State_Dist_Alloc__c/fields/Brand_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Brand_Allocation__c</fullName>
    <description>PS-MC-SB-13 to manage Brand allocations for this time period</description>
    <formula>Brand_Country_Region_State_Allocation__r.Brand_Country_Region_Allocation__r.Brand_Country_Allocation__r.Brand_Allocation__c</formula>
    <label>Brand Allocation</label>
    <type>Text</type>
</CustomField>