unpackaged/main/default/objects/Brand_Country_Region_State_Dist_Alloc__c/fields/Brand_Country_Region_State_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Brand_Country_Region_State_Allocation__c</fullName>
    <description>PS-MC-SB-13 to manage Brand Country Region State Allocation for this time period</description>
    <label>State Level Allocation</label>
    <referenceTo>Brand_Country_Region_State_Allocation__c</referenceTo>
    <relationshipLabel>Distributor Level Allocations</relationshipLabel>
    <relationshipName>Brand_Country_Region_State_Dist_Allocs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>