unpackaged/main/default/objects/Brand_Country_Region_State_Dist_Alloc__c/fields/Region_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Region_Allocation__c</fullName>
    <description>PS-MC-SB-13 to manage region allocations for this time period</description>
    <formula>Brand_Country_Region_State_Allocation__r.Brand_Country_Region_Allocation__c</formula>
    <label>Region Allocation</label>
    <type>Text</type>
</CustomField>